# weather-pred-quality

./: .gitignore  README.md  main.py  pyproject.toml
.github/workflows/: collect.yml  metrics.yml  pages.yml  weekly-report.yml
data/: stations.json
data/geo/: coast.json
data/metrics/: bootstrap_ci.parquet  brier_decomposition.parquet  conformal.parquet  metrics.parquet
docs/: 00-overview.md  01-data-sources.md  02-prior-art.md  03-metrics-and-calibration.md  04-architecture-options.md  05-costs.md  06-smoke-test.md  07-first-real-metrics.md  08-calibration.md  PLAN.md  README.md  dashboard.html  data-layout.md  data-sources.md  glossary.md  methodology.md  overview.md  station-map.html
docs/research/: 00-overview.md  01-data-sources.md  02-prior-art.md  03-metrics-and-calibration.md  04-architecture-options.md  05-costs.md  README.md
docs/results/: 2026-07-05-calibration.md  2026-07-05-first-real-metrics.md  README.md
probes/: README.md  locations.py  probe_ea_rainfall.py  probe_metar.py  probe_metno.py  probe_metoffice_landobs.py  probe_nrw_rainfall.py  probe_open_meteo_ensemble.py  probe_open_meteo_forecast.py  probe_open_meteo_previous_runs.py  probe_sepa_rainfall.py
scripts/: add_ea_measures.py  add_nrw_gauges.py  add_sepa_gauges.py  backfill_ukmo.py  build_station_registry.py  check_source_alerts.py  make_dashboard.py  make_station_map.py  make_weekly_report.py  report_metrics.py  run_calibration.py  run_metrics.py  smoke_metrics.py
tests/: test_geo.py
wpq/: calibration.py  collect.py  config.py  fetchers.py  geo.py  metrics.py  normalize.py
(+10 files in other folders)
