[project]
name = "weather-pred-quality"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "duckdb>=1.5.4",
    "numpy>=2.5.1",
    "polars[rtcompat]>=1.42.1",
    "requests>=2.34.2",
]

[dependency-groups]
dev = [
    "pytest>=9.1.1",
]

[tool.pytest.ini_options]
# wpq is not an installed package; tests import it from the repo root
pythonpath = ["."]
testpaths = ["tests"]
